# esercizi_riepilogo

esercizio_ordinamento_1 (draft)/: readme.md
esercizio_ordinamento_1 (draft)/sort01/: CMakeLists.txt  main.c  mergesort.c  mergesort.h  utils.c  utils.h
esercizio_ordinamento_1 (draft)/sort02/: CMakeLists.txt  array_of_data.c  array_of_data.h  main.c  mergesort.c  mergesort.h  utils.c  utils.h
esercizio_ordinamento_1 (draft)/sort03/: CMakeLists.txt  compare_strategy.c  data.c  main.c  mergesort.h
esercizio_ordinamento_1 (draft)/sort04/: CMakeLists.txt  compare_strategy.h  data.h  main.c  mergesort.c  utils.h
esercizio_ordinamento_1 (draft)/sort05/: CMakeLists.txt  data.c  data.h  main.c  mergesort.c  utils.c
